@@ -20,16 +20,10 @@
 package org.apache.druid.server.http;
 
 import com.google.common.annotations.VisibleForTesting;
-import com.google.common.collect.ImmutableList;
-import com.google.common.util.concurrent.ListenableFuture;
 import com.google.inject.Inject;
 import com.sun.jersey.spi.container.ResourceFilters;
-import org.apache.druid.common.guava.FutureUtils;
-import org.apache.druid.error.InternalServerError;
 import org.apache.druid.error.InvalidInput;
 import org.apache.druid.error.NotFound;
-import org.apache.druid.rpc.HttpResponseException;
-import org.apache.druid.rpc.indexing.OverlordClient;
 import org.apache.druid.server.compaction.CompactionProgressResponse;
 import org.apache.druid.server.compaction.CompactionStatusResponse;
 import org.apache.druid.server.coordinator.AutoCompactionSnapshot;
@@ -46,22 +40,19 @@ import javax.ws.rs.Produces;
 import javax.ws.rs.QueryParam;
 import javax.ws.rs.core.MediaType;
 import javax.ws.rs.core.Response;
-import java.util.Collection;
+import java.util.List;
 
 @Path("/druid/coordinator/v1/compaction")
 public class CoordinatorCompactionResource
 {
   private final DruidCoordinator coordinator;
-  private final OverlordClient overlordClient;
 
   @Inject
   public CoordinatorCompactionResource(
-      DruidCoordinator coordinator,
-      OverlordClient overlordClient
+      DruidCoordinator coordinator
   )
   {
     this.coordinator = coordinator;
-    this.overlordClient = overlordClient;
   }
 
   /**
@@ -89,10 +80,6 @@ public class CoordinatorCompactionResource
       return ServletResourceUtils.buildErrorResponseFrom(InvalidInput.exception("No DataSource specified"));
     }
 
-    if (isCompactionSupervisorEnabled()) {
-      return buildResponse(overlordClient.getBytesAwaitingCompaction(dataSource));
-    }
-
     final AutoCompactionSnapshot snapshot = coordinator.getAutoCompactionSnapshotForDataSource(dataSource);
     if (snapshot == null) {
       return ServletResourceUtils.buildErrorResponseFrom(NotFound.exception("Unknown DataSource"));
@@ -109,19 +96,15 @@ public class CoordinatorCompactionResource
       @QueryParam("dataSource") String dataSource
   )
   {
-    if (isCompactionSupervisorEnabled()) {
-      return buildResponse(overlordClient.getCompactionSnapshots(dataSource));
-    }
-
-    final Collection<AutoCompactionSnapshot> snapshots;
+    final List<AutoCompactionSnapshot> snapshots;
     if (dataSource == null || dataSource.isEmpty()) {
-      snapshots = coordinator.getAutoCompactionSnapshot().values();
+      snapshots = List.copyOf(coordinator.getAutoCompactionSnapshot().values());
     } else {
       AutoCompactionSnapshot autoCompactionSnapshot = coordinator.getAutoCompactionSnapshotForDataSource(dataSource);
       if (autoCompactionSnapshot == null) {
         return ServletResourceUtils.buildErrorResponseFrom(NotFound.exception("Unknown DataSource"));
       }
-      snapshots = ImmutableList.of(autoCompactionSnapshot);
+      snapshots = List.of(autoCompactionSnapshot);
     }
     return Response.ok(new CompactionStatusResponse(snapshots)).build();
   }
@@ -129,6 +112,7 @@ public class CoordinatorCompactionResource
   @POST
   @Path("/simulate")
   @Consumes(MediaType.APPLICATION_JSON)
+  @Produces(MediaType.APPLICATION_JSON)
   @ResourceFilters(StateResourceFilter.class)
   public Response simulateWithClusterConfigUpdate(
       ClusterCompactionConfig updatePayload
@@ -137,38 +121,5 @@ public class CoordinatorCompactionResource
     return Response.ok().entity(
         coordinator.simulateRunWithConfigUpdate(updatePayload)
     ).build();
-  }
-
-  private <T> Response buildResponse(ListenableFuture<T> future)
-  {
-    try {
-      return Response.ok(FutureUtils.getUnchecked(future, true)).build();
-    }
-    catch (Exception e) {
-      if (e.getCause() instanceof HttpResponseException) {
-        final HttpResponseException cause = (HttpResponseException) e.getCause();
-        return Response.status(cause.getResponse().getStatus().getCode())
-                       .entity(cause.getResponse().getContent())
-                       .build();
-      } else {
-        return ServletResourceUtils.buildErrorResponseFrom(
-            InternalServerError.exception(e.getMessage())
-        );
-      }
-    }
-  }
-
-  /**
-   * Check if compaction supervisors are enabled on the Overlord. 
-   */
-  private boolean isCompactionSupervisorEnabled()
-  {
-    try {
-      return FutureUtils.getUnchecked(overlordClient.isCompactionSupervisorEnabled(), true);
-    }
-    catch (Exception e) {
-      // Overlord is probably on an older version, assume that compaction supervisor is not enabled
-      return false;
-    }
   }
 }
